# Software-Engineering-Experiment

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  实验报告规范.md
.github/workflows/: test.yml
campus_task/: CHANGELOG.md  README.md  USER_GUIDE.md  __init__.py  __main__.py  ai_harness.py  campus_task.log.example  eval_cases.json  main.py  task_model.py  task_service.py  task_storage.py  tasks_example.json  trace.jsonl
python_basics/: 24046523_陆一睿_Lab1.md  lab1_advanced.py  lab1_datatype.py  lab1_hello.py  lab1_variable.py
screenshots/: tasks_demo.csv
tests/: test_campus_task.py
实验交付物/: 实验七_Bug报告与修复.md  实验三_需求与测试用例对应表.md  实验二_模块关系图.md  实验五_变更请求表.md  实验八_Harness架构图与反思.md  实验六_CI配置说明.md  实验四_Git协作与版本控制.md
实验交付物/screenshots/: README.md  截图命令清单.md
