[project]
name = "CampusTask"
version = "0.4.0"
description = "校园任务清单 - 命令行任务管理工具"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W"]     # pycodestyle errors, pyflakes, warnings

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true